--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
         <div id="greetings" class="greetings-container">
             <h1>Greetings</h1>
             <!-- FIRST BATCH -->
+            <!-- <div id="b1" class="hidden-batch" style="max-height:fit-content;"> -->
             <div id="b1" class="hidden-batch" style="max-height:fit-content;">
                 <div class="row">
+                    <!-- AJ -->
                     <div class="col reveal">
                         <div class="user-icon">
                             <img src="images/DP_Tiw.jpg" alt="">
@@ -89,11 +91,134 @@
                             </div>
                         </div>
                         <div class="message">
-                            <!-- <p>Happy Birthday to my most favorite hooman in the world! your presence fills everyday with joy
-                                and love. May this special day be as bright and beautiful as your smile. Today, as we celebrate your special
-                                day, I look forward to creating more beautiful memories with you. Here's to another year of love, laughter,
-                                and unforgettable adventures. Let's make every day as wonderful as this one. I love you!</p> -->
-                            <p>Happy Birthday love! </p>
+                            <p>Happy Birthday love! Yung message ko sayo alam mo na yun!</p>
+                        </div>
+                    </div>
+                    <!-- Tito Jimmy  -->
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_None.png" alt="">
+                            <div class="user-name">
+                                <h4>Jimmy Reyes</h4>
+                                <span>Family</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p></p>
+                        </div>
+                    </div>
+                    <!-- Tita Marilou -->
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_None.png" alt="">
+                            <div class="user-name">
+                                <h4>Marilou Reyes</h4>
+                                <span>Family</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- Ate Dar  -->
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_Darlene.jpg" alt="">
+                            <div class="user-name">
+                                <h4>Darlene Reyes</h4>
+                                <span>Family</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Therese, to my twinny 4life, <br>
+                                happy birthday!!!!!! know that I’m always blessed to have u in this lifetime as my sister (kahit minsan sobrang kulit/busy mo pls 🥲) ate is always here for u!! love you to the moon and back! 🫶🏻🤍</p>
+                        </div>
+                    </div>
+                    <!-- Andy -->
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_Andy.jpg" alt="">
+                            <div class="user-name">
+                                <h4>Andy</h4>
+                                <span>Family</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>From Andy, <br>
+                                happy birthday therese !! i hope you've had an amazing day so far and since it's your day today i just wanted to say na i hope you view yourself just as highly as we view you. i know that you've also had silent struggles— things that you probably have a difficult time even speaking into existence— but i hope you know na when you're ready to share your load, there are people here who will always be ready and willing to take it on (including me ofc!!). so ayun happy birthday again and to better days ahead 🤍</p>
+                        </div>
+                    </div>
+                    <!-- JV  -->
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_JV.jpg" alt="">
+                            <div class="user-name">
+                                <h4>JV</h4>
+                                <span>Family</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>From jv,<br>
+                                happy birthday, ate! 
+                                <br>
+                                u know na here lang me for you lagi! sana rin you're doing well in all aspects of your life hehe goodluck sa lahat! i love uu 😚🫶🏻</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_None.png" alt="">
+                            <div class="user-name">
+                                <h4>Juan Pedro</h4>
+                                <span>Others</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Happy Birthday!</p>
+                        </div>
+                    </div>
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_None.png" alt="">
+                            <div class="user-name">
+                                <h4>Juan Pedro</h4>
+                                <span>Others</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Happy Birthday!</p>
+                        </div>
+                    </div>
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_None.png" alt="">
+                            <div class="user-name">
+                                <h4>Juan Pedro</h4>
+                                <span>Others</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Happy Birthday!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- SECOND BATCH -->
+            <div id="b2" class="hidden-batch" style="max-height:0px;opacity:0;">
+                <div class="row">
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_None.png" alt="">
+                            <div class="user-name">
+                                <h4>Juan Pedro</h4>
+                                <span>Others</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Happy Birthday!</p>
                         </div>
                     </div>
                     <!-- CHABEL -->
@@ -140,7 +265,7 @@
                     <!-- Monette Santiago  -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_MonetteSantiago.jpg" alt="">
                             <div class="user-name">
                                 <h4>Monette Santiago </h4>
                                 <span>TG</span>
@@ -165,19 +290,6 @@
                     </div>
                 </div>
                 <div class="row">
-                    <!-- NEGGY -->
-                    <div class="col reveal">
-                        <div class="user-icon">
-                            <img src="images/DP_Viya.jpg" alt="">
-                            <div class="user-name">
-                                <h4>Neggytot</h4>
-                                <span>Bespwen</span>
-                            </div>
-                        </div>
-                        <div class="message">
-                            <p>HAPPY BIRFFFFDAY ERETSKI ❤️</p>
-                        </div>
-                    </div>
                     <!-- MAYE -->
                     <div class="col reveal">
                         <div class="user-icon">
@@ -204,10 +316,23 @@
                             <p>Joyeux anniversaire, ma sœur ! restez toujours belle et gentille ! Merci d'être toujours compréhensif et gentil ! Tous mes vœux ! ❤️</p>
                         </div>
                     </div>
+                    <!-- NEGGY -->
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_Viya.jpg" alt="">
+                            <div class="user-name">
+                                <h4>Neggytot</h4>
+                                <span>Bespwen</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>HAPPY BIRFFFFDAY ERETSKI ❤️</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <!-- SECOND BATCH -->
-            <div id="b2" class="hidden-batch" style="max-height:0px;opacity:0;">
+            <!-- THIRD BATCH -->
+            <div id="b3" class="hidden-batch" style="max-height:0px;opacity:0;">
                 <div class="row">
                     <!-- CED CABATBAT -->
                     <div class="col reveal">
@@ -250,39 +375,80 @@
                     </div>
                 </div>
                 <div class="row">
-                    <!-- BHOX -->
+                    <!-- BABA -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Baba.jpg" alt="">
                             <div class="user-name">
-                                <h4>Bhox</h4>
-                                <span>bhousx</span>
+                                <h4>Baba</h4>
+                                <span>Dabarkads</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>happy birthday bieh! slay lang pagalagi ilysm</p>
+                            <p>HAPPY BIRTHDAY BEST B! Excited to see you glow more in your 25th year 🤍<br>Let's enjoy quarter life crisis togedur wahahaha love you always 💩</p>
                         </div>
                     </div>
+                    <!-- CHOLO -->
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_Cholo.jpg" alt="">
+                            <div class="user-name">
+                                <h4>Cholo</h4>
+                                <span>Dabarkads</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Happy birthday Eret! May u find joy in spam, tocino and Aj. Wishing u all the best kahit mejo snob ka, Have a great one! 🎈🍻🎂</p>
+                        </div>
+                    </div>
+                    <!-- CARL -->
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_Carl.jpg" alt="">
+                            <div class="user-name">
+                                <h4>Carl</h4>
+                                <span>Dabarkads</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>Happy birthday Eret!! San ang inom? Mwa</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
                     <!-- BEA -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Bea.jpg" alt="">
                             <div class="user-name">
                                 <h4>Bea</h4>
-                                <span>Aport</span>
+                                <span>Dabarkads</span>
                             </div>
                         </div>
                         <div class="message">
                             <p>to my idol eret, happy happy birthday!!!! thank u for everything!! i am so happy for youu bhie <333 pls share more tips and tricks for me wahhahahha jk!! love u mwa mwa</p>
                         </div>
                     </div>
+                    <!-- BHOX -->
+                    <div class="col reveal">
+                        <div class="user-icon">
+                            <img src="images/DP_Bhox.jpg" alt="">
+                            <div class="user-name">
+                                <h4>Bhox</h4>
+                                <span>Dabarkads</span>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <p>happy birthday bieh! slay lang pagalagi ilysm</p>
+                        </div>
+                    </div>
                     <!-- Franco -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Franco.jpg" alt="">
                             <div class="user-name">
-                                <h4>Franco</h4>
-                                <span>Jose</span>
+                                <h4>Jose AKA Franco</h4>
+                                <span>Dabarkads</span>
                             </div>
                         </div>
                         <div class="message">
@@ -291,50 +457,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col reveal">
-                        <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
-                            <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>How are you related</span>
-                            </div>
-                        </div>
-                        <div class="message">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
-                                lobortis maximus</p>
-                        </div>
-                    </div>
-                    <div class="col reveal">
-                        <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
-                            <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>How are you related</span>
-                            </div>
-                        </div>
-                        <div class="message">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
-                                lobortis maximus</p>
-                        </div>
-                    </div>
-                    <div class="col reveal">
-                        <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
-                            <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>How are you related</span>
-                            </div>
-                        </div>
-                        <div class="message">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
-                                lobortis maximus.</p>
-                        </div>
-                    </div>
-                </div>
             </div>
-            <!-- THIRD BATCH -->
-            <div id="b3" class="hidden-batch" style="max-height:0px;opacity:0;">
+            <!-- FOURTH BATCH -->
+            <div id="b4" class="hidden-batch" style="max-height:0px;opacity:0;">
                 <div class="row">
                     <div class="col reveal">
                         <div class="user-icon">
