--- a/index.html
+++ b/index.html
@@ -702,12 +702,52 @@
                             </div>
                         </a>
                     </div>
-                    <p class="medium-up--hide">By Ced Cute</p>
+                    <p>By Ced Cute</p>
                     <!-- <div style="display:none">
                         <a data-fancybox="cedxbanner" data-caption="When kaya ulit???" href="images/College3.jpg">
                             <img src="images/College3.jpg" alt="" />
                         </a>
                     </div> -->
+                </div>
+                <div id="dabarkads" class="album reveal">
+                    <div class="thumbnail">
+                        <a data-fancybox="dabarkads" href="images/dabarkads1.jpg">
+                            <img src="images/dabarkads1.jpg" width="100%" height="auto" alt="" />
+                            <div class="image-layer">
+                                <h3>Dabarkads</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <p>dabarkads</p>
+                    <div style="display:none">
+                        <a data-fancybox="dabarkads" href="images/dabarkads2.jpg">
+                            <img src="images/dabarkads2.jpg" alt="" />
+                        </a>
+                        <a data-fancybox="dabarkads" href="images/dabarkads3.jpg">
+                            <img src="images/dabarkads3.jpg" alt="" />
+                        </a>
+                        <a data-fancybox="dabarkads" href="images/dabarkads4.jpg">
+                            <img src="images/dabarkads4.jpg" alt="" />
+                        </a>
+                        <a data-fancybox="dabarkads" href="images/dabarkads5.jpg">
+                            <img src="images/dabarkads5.jpg" alt="" />
+                        </a>
+                        <a data-fancybox="dabarkads" href="images/dabarkads6.jpg">
+                            <img src="images/dabarkads6.jpg" alt="" />
+                        </a>
+                        <a data-fancybox="dabarkads" href="images/dabarkads7.jpg">
+                            <img src="images/dabarkads7.jpg" alt="" />
+                        </a>
+                        <a data-fancybox="dabarkads" href="images/dabarkads8.jpg">
+                            <img src="images/dabarkads8.jpg" alt="" />
+                        </a>
+                        <a data-fancybox="dabarkads" href="images/dabarkads9.jpg">
+                            <img src="images/dabarkads9.jpg" alt="" />
+                        </a>
+                        <a data-fancybox="dabarkads" href="images/dabarkads10.jpg">
+                            <img src="images/dabarkads10.jpg" alt="" />
+                        </a>
+                    </div>
                 </div>
                 <!-- FROM NEGGYTOT -->
                 <div id="neggy" class="album reveal">
@@ -719,14 +759,13 @@
                             </div>
                         </a>
                     </div>
-                    <p class="medium-up--hide">Neggy</p>
+                    <p>Fr: Neggy</p>
                     <!-- <div style="display:none">
                         <a data-fancybox="neggy" data-caption="When kaya ulit???" href="images/College3.jpg">
                             <img src="images/College3.jpg" alt="" />
                         </a>
                     </div> -->
                 </div>
-
             </div>
         </div>
     </div>
@@ -748,6 +787,7 @@
         Fancybox.bind('[data-fancybox="verycollege"]', {});
         Fancybox.bind('[data-fancybox="cedxbanner"]', {});
         Fancybox.bind('[data-fancybox="neggy"]', {});
+        Fancybox.bind('[data-fancybox="dabarkads"]', {});
     </script>
 </body>
 
