--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                             </div>
                         </a>
                     </div>
-                    <p class="medium-up--hide">First Official Date</p>
+                    <p>First Official Date</p>
                     <div style="display:none">
                         <a data-fancybox="firstDate" data-caption="After pumunta kay Papa" href="images/FD2.jpeg">
                             <img src="images/FD2.jpeg" alt="" />
@@ -645,7 +645,7 @@
                             </div>
                         </a>
                     </div>
-                    <p class="medium-up--hide">Great Awards</p>
+                    <p>Great Awards</p>
                     <div style="display:none">
                         <a data-fancybox="greatAward" href="images/GA2.jpg">
                             <img src="images/GA2.jpg" alt="" />
@@ -669,7 +669,7 @@
                             </div>
                         </a>
                     </div>
-                    <p class="medium-up--hide">Very College</p>
+                    <p>Very College</p>
                     <div style="display:none">
                         <a data-fancybox="verycollege" href="images/College2.jpg">
                             <img src="images/College2.jpg" alt="" />
