--- a/index.html
+++ b/index.html
@@ -208,17 +208,18 @@
             </div>
             <!-- SECOND BATCH -->
             <div id="b2" class="hidden-batch" style="max-height:0px;opacity:0;">
+                <!-- CECE -->
                 <div class="row">
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Cece.jpg" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>Others</span>
+                                <h4>Cerilo Pagulayan</h4>
+                                <span>GABC</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Happy Birthday!</p>
+                            <p>Hello Tere! Thank you so much for the gift of friendship, kindness, and a beautiful heart. On your special day, I just want you to know that I am so happy to have such an amazing and special person in my life. I want only good things for you on your special day. Have a blissful birthday celebration! Samgyup soon please… Luv yeah 🫶🏼✨💖</p>
                         </div>
                     </div>
                     <!-- CHABEL -->
