--- a/index.html
+++ b/index.html
@@ -462,17 +462,17 @@
             <!-- FOURTH BATCH -->
             <div id="b4" class="hidden-batch" style="max-height:0px;opacity:0;">
                 <div class="row">
+                    <!-- JANINE -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Janine.jpg" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>How are you related</span>
+                                <h4>Janine Cabrera</h4>
+                                <span>GABC</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
-                                lobortis maximus</p>
+                            <p>Hi, Therese! Happy Birthday! 🥳Grateful to have you as a teammate and friend. Wishing you’ll have all the good things in life because dasurv! Love you, sis ❤️</p>
                         </div>
                     </div>
                     <div class="col reveal">
