--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <!-- Tito Jimmy  -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Jimmy.jpg" alt="">
                             <div class="user-name">
                                 <h4>Jimmy Reyes</h4>
                                 <span>Family</span>
@@ -110,7 +110,7 @@
                     <!-- Tita Marilou -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Marilou.jpg" alt="">
                             <div class="user-name">
                                 <h4>Marilou Reyes</h4>
                                 <span>Family</span>
@@ -609,11 +609,11 @@
                         <a data-fancybox="firstDate" href="images/FD1.jpeg">
                             <img src="images/FD1.jpeg" width="100%" height="auto" alt="" />
                             <div class="image-layer">
-                                <h3>FIRST OFFICIAL DATE</h3>
+                                <h3>FIRST OFFICIAL DATE 🤍</h3>
                             </div>
                         </a>
                     </div>
-                    <p>First Official Date</p>
+                    <p>First Official Date 🤍</p>
                     <div style="display:none">
                         <a data-fancybox="firstDate" data-caption="After pumunta kay Papa" href="images/FD2.jpeg">
                             <img src="images/FD2.jpeg" alt="" />
@@ -660,17 +660,38 @@
                     </div>
                 </div>
                 
+                <!-- Ate Dar -->
+                <div id="sister" class="album reveal">
+                    <div class="thumbnail">
+                        <a data-fancybox="sister" href="images/Sister1.jpg">
+                            <img src="images/Sister1.jpg" width="100%" height="auto" alt="" />
+                            <div class="image-layer">
+                                <h3>Ate Dar ❤️</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <p>Ate Dar ❤️</p>
+                    <div style="display:none">
+                        <a data-fancybox="sister" href="images/Sister2.jpg">
+                            <img src="images/Sister2.jpg" alt="" />
+                        </a>
+                        <a data-fancybox="sister" href="images/Sister3.jpg">
+                            <img src="images/Sister3.jpg" alt="" />
+                        </a>
+                    </div>
+                </div>
+
                 <!-- TG - VERY COLLEGE? -->
                 <div id="verycollege" class="album reveal">
                     <div class="thumbnail">
                         <a data-fancybox="verycollege" href="images/College1.jpg">
                             <img src="images/College1.jpg" width="100%" height="auto" alt="" />
                             <div class="image-layer">
-                                <h3>Very College</h3>
+                                <h3>Very College?</h3>
                             </div>
                         </a>
                     </div>
-                    <p>Very College</p>
+                    <p>Very College?</p>
                     <div style="display:none">
                         <a data-fancybox="verycollege" href="images/College2.jpg">
                             <img src="images/College2.jpg" alt="" />
@@ -696,14 +717,14 @@
                 <!-- CED'S EDIT -->
                 <div id="cedxbanner" class="album reveal">
                     <div class="thumbnail">
-                        <a data-fancybox="cedxbanner" href="images/Ced_banner.png" data-caption="From: Ced Cute">
+                        <a data-fancybox="cedxbanner" href="images/Ced_banner.png" data-caption="From: Ced AKA First Loyal Customer">
                             <img src="images/Ced_banner.png" width="100%" height="auto" alt="" />
                             <div class="image-layer">
-                                <h3>By Ced Cute</h3>
+                                <h3>By Ced Cute 🙏</h3>
                             </div>
                         </a>
                     </div>
-                    <p>By Ced Cute</p>
+                    <p>By Ced Cute 🙏</p>
                     <!-- <div style="display:none">
                         <a data-fancybox="cedxbanner" data-caption="When kaya ulit???" href="images/College3.jpg">
                             <img src="images/College3.jpg" alt="" />
@@ -789,6 +810,7 @@
         Fancybox.bind('[data-fancybox="cedxbanner"]', {});
         Fancybox.bind('[data-fancybox="neggy"]', {});
         Fancybox.bind('[data-fancybox="dabarkads"]', {});
+        Fancybox.bind('[data-fancybox="sister"]', {});
     </script>
 </body>
 
