--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
                             </div>
                         </div>
                         <div class="message">
-                            <p>From Andy, <br>
-                                happy birthday therese !! i hope you've had an amazing day so far and since it's your day today i just wanted to say na i hope you view yourself just as highly as we view you. i know that you've also had silent struggles— things that you probably have a difficult time even speaking into existence— but i hope you know na when you're ready to share your load, there are people here who will always be ready and willing to take it on (including me ofc!!). so ayun happy birthday again and to better days ahead 🤍</p>
+                            <p>Happy birthday therese !! i hope you've had an amazing day so far and since it's your day today i just wanted to say na i hope you view yourself just as highly as we view you. i know that you've also had silent struggles— things that you probably have a difficult time even speaking into existence— but i hope you know na when you're ready to share your load, there are people here who will always be ready and willing to take it on (including me ofc!!). so ayun happy birthday again and to better days ahead 🤍</p>
                         </div>
                     </div>
                     <!-- JV  -->
@@ -160,8 +159,7 @@
                             </div>
                         </div>
                         <div class="message">
-                            <p>From jv,<br>
-                                happy birthday, ate! 
+                            <p>happy birthday, ate! 
                                 <br>
                                 u know na here lang me for you lagi! sana rin you're doing well in all aspects of your life hehe goodluck sa lahat! i love uu 😚🫶🏻</p>
                         </div>
