--- a/index.html
+++ b/index.html
@@ -166,16 +166,17 @@
                     </div>
                 </div>
                 <div class="row">
+                    <!-- Astine -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Astine.jpg" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>Others</span>
+                                <h4>Astine</h4>
+                                <span>Family</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Happy Birthday!</p>
+                            <p>HBD Anne Therese!!! Here’s to another year of enjoying life & calling me “Ate Astine” kahit this time, magka-age na tayo. Haha! Continue to live a life the way you want it to be kasi you deserve it! Luv lots XOXO Gossip Girl</p>
                         </div>
                     </div>
                     <div class="col reveal">
