--- a/index.html
+++ b/index.html
@@ -179,12 +179,13 @@
                             <p>HBD Anne Therese!!! Here’s to another year of enjoying life & calling me “Ate Astine” kahit this time, magka-age na tayo. Haha! Continue to live a life the way you want it to be kasi you deserve it! Luv lots XOXO Gossip Girl</p>
                         </div>
                     </div>
+                    <!-- Cheryl -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Cheryl.jpg" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>Others</span>
+                                <h4>Cheryl</h4>
+                                <span>Family</span>
                             </div>
                         </div>
                         <div class="message">
@@ -195,8 +196,8 @@
                         <div class="user-icon">
                             <img src="images/DP_None.png" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>Others</span>
+                                <h4>Violy</h4>
+                                <span>Family</span>
                             </div>
                         </div>
                         <div class="message">
@@ -474,17 +475,17 @@
                             <p>Hi, Therese! Happy Birthday! 🥳Grateful to have you as a teammate and friend. Wishing you’ll have all the good things in life because dasurv! Love you, sis ❤️</p>
                         </div>
                     </div>
+                    <!-- BLISS -->
                     <div class="col reveal">
                         <div class="user-icon">
-                            <img src="images/DP_None.png" alt="">
+                            <img src="images/DP_Bliss.jpg" alt="">
                             <div class="user-name">
-                                <h4>Juan Pedro</h4>
-                                <span>How are you related</span>
+                                <h4>Bliss De Castro</h4>
+                                <span>GABC</span>
                             </div>
                         </div>
                         <div class="message">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor, libero vitae
-                                lobortis maximus</p>
+                            <p>happy happy birthday Therese!! 🥳🍰 today is for celebrating the one and only you, and I am happy na nakilala kita. thank you for being the way you are. as challenging as work can get, it's a comfort to know that you're someone I can rely on whether it's just getting something done or chikahan tuwing (semi) late na tayo maglu-lunch HAHA 😂 will be here to support and help you in the ways you need, super excited na ako sa baking ventures mo 😋 God bless!!</p>
                         </div>
                     </div>
                     <div class="col reveal">
